fixing positioning on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,19 @@ body {
 
 .btn-secondary {
 	background-color: var(--clr-desaturated-dark-blue);
+	z-index: 100;
+	position: absolute;
+	bottom: 22.5%;
+	left: 57%;
+	transform: translateX(-57%);
+}
+
+@media screen and (max-width: 410px) {
+	.btn-secondary {
+		bottom: 25.5%;
+		left: 68%;
+		transform: translateX(-68%);
+	}
 }
 
 .btn-secondary img {
@@ -116,10 +129,10 @@ body {
 .footer-content {
 	display: flex;
 	width: 90%;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	gap: 1.5rem;
-	padding: 2rem 0rem 2rem;
+	padding: 2.5rem 4rem 2.5rem;
 	margin: 0 auto;
 }
 
@@ -135,9 +148,8 @@ body {
 
 .footer-secondary {
 	background-color: var(--clr-Vdark-grayish-blue);
-	position: absolute;
-	transform: translateY(10%);
-	width: 87%;
+	position: relative;
+	width: 100%;
 	max-width: 390px;
 	border-radius: 0 0 10px 10px;
 	margin: 0 auto;
